<resources>
    <string name="app_name">Xpendify</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="action_analysis">Analysis</string>

    <string name="spending_details">"SPENDING DETAILS"</string>
    <string name="amount">AMOUNT SPENT</string>
    <string name="note">NOTE</string>

    <string name="wel_msg">WELCOME TO XPENDIFY</string>

    <string name="caption">TRANSACTION DETAILS</string>
    <string name="credit">CREDIT</string>
    <string name="debit">DEBIT</string>
    <string name="category">CATEGORY</string>
    <string name="caption_repeat">REPEATING DETAILS</string>
    <string name="repeat">REPEAT</string>
    <string name="date">DATE</string>
    <string name="due_date">DUE DATE</string>

    <string name="repeat_date">NEXT TRANSACTION DATE</string>
    <string name="budget_amount">MONTHLY BUDGET AMOUNT</string>
    <string name="account_balance">ACCOUNT BALANCE</string>
    <string name="customer_bank">CUSTOMER\'S BANK</string>
    <string name="account_type">ACCOUNT TYPE</string>
    <string name="account_number">ACCOUNT NUMBER</string>
    <string name="payee_items">PAYEE/ITEMS</string>

    <string name="password">PASSWORD</string>
    <string name="pref_use_gauge">pref_use_gauge</string>
    <string name="pref_tip_of_the_day">pref_tip_of_the_day</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="account">Account</string>
    <string name="reports">Reports</string>
    <string name="budget">Budget</string>
    <string name="bills">Bills</string>

    <string name="expense">Expense</string>
    <string name="earning">Earnings</string>

    <string name="draw_pattern">DRAW PATTERN TO UNLOCK</string>
    <string name="set_pattern">SET PATTERN</string>
    <string name="confirm_pattern">CONFIRM PATTERN</string>
    <string name="wrong_pattern">WRONG PATTERN</string>
    <string name="pattern_mismatch">PATTERN MISMATCH</string>
    <string name="invalid_pattern">INVALID PATTERN</string>

    <string name="no_expense">NO EXPENSE FOUND</string>

    <string name="dates">date</string>
    <string name="action_search">Search</string>
    <string name="action_entry">Entry</string>

    <string name="channel_alpha">A</string>
    <string name="channel_red">R</string>
    <string name="channel_green">G</string>
    <string name="channel_blue">B</string>

    <string name="default_format">###,##0.00</string>
    <string name="default_decimal_separator">\'</string>

    <string name="channel_hue">H</string>
    <string name="channel_saturation">S</string>
    <string name="channel_value">V</string>
    <string name="channel_lightness">L</string>

    <string name="fab_scrolling_view_behavior">com.samsoft.xpendify.widget.others.ScrollAwareFABBehavior</string>

</resources>
