<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.samsoft.xpendify.activity.MainActivity">

    <item
        android:id="@id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@id/action_analysis"
        android:color="#f44336"
        android:icon="@drawable/ic_show_chart_white_24dp"
        android:title="@string/action_analysis"
        app:showAsAction="never" />

    <item
        android:id="@id/action_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@id/action_about"
        android:icon="@drawable/ic_info_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@id/action_help"
        android:icon="@drawable/ic_help_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_help"
        app:showAsAction="never" />

</menu>
